--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -166,7 +166,7 @@ services:
     ports:
         - "8888:8888"
     volumes:
-        - ./nbs:/home/jovyan/work/nbs
+        - ./nbs:/home
         - ./events:/tmp/spark-events
-    command: bash -c "pip install gdown faiss-cpu && gdown -O /home/jovyan/work/nbs/un-general-debates.csv 1p2FqqFP-ZbmhFdOmvZoQzdDyF5D0MRDn; start-notebook.sh --ip=0.0.0.0 --allow-root --NotebookApp.token=''" 
+    command: start-notebook.sh --ip=0.0.0.0 --allow-root --NotebookApp.token=''
 
